--- a/src/sass/base/_title.scss
+++ b/src/sass/base/_title.scss
@@ -8,7 +8,12 @@ h1,h2,h3,h4,h6{
 h2{
   margin-top: -0.3879em;
   font-size: 2.25em;
+  margin-bottom: 0.6em;
 
+  @media (max-width: 550px){
+    font-size: 1.5em;
+    text-transform: initial;
+  }
 }
 
 h3{
