--- a/src/sass/components/header/_contact-btn.scss
+++ b/src/sass/components/header/_contact-btn.scss
@@ -1,17 +1,22 @@
-.dons-btn{
+.contact-btn{
   background-color: $color2;
   color: #000;
   display: inline-block;
   padding: 0.555em 2em;
   text-decoration: none;
-  border-radius: 2em;
+  border-radius: 0.5em;
   box-shadow: inset 0 -2px $color1, 0 3px 10px -4px #000;
   transition: 0.3s;
   margin-top: 1.1em;
   text-transform: uppercase;
+  margin-bottom: 7.9em;
 
   &:hover, &:focus{
     background-color: lighten($color2, 10);
     box-shadow: inset 0px -2px $color1, 0 3px 10px -4px #000 ;
+  }
+
+  @media (max-width: 500px){
+    margin-bottom: 3.6em;
   }
 }
