--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -9,12 +9,26 @@
 @import "generic/box-sizing";
 
 
-@import "components/required";
-@import "components/info-for-required";
-@import "components/field-container";
-@import "components/input-alert";
-@import "components/to-the-top-link";
-@import "components/page-title";
+
+@import "base/page";
+@import "base/paragraph";
+@import "base/title";
+@import "base/main";
+@import "base/footer";
+@import "base/abbr";
+@import "base/a";
+
+@import "components/shared/_to-the-top-link";
+@import "components/shared/visually-hidden";
+@import "components/shared/wrap";
+@import "components/header/_contact-btn";
+@import "components/shared/btn";
+@import "components/shared/link";
+@import "components/shared/address__part";
+@import "components/shared/bloc";
+@import "components/shared/read-more";
+@import "components/shared/center";
+@import "components/shared/dark-btn";
 
 @import "components/header/home";
 @import "components/header/banner__top-bar";
@@ -29,46 +43,32 @@
 @import "components/header/slogan__part1";
 @import "components/header/slogan__part2";
 @import "components/header/top-bar-container";
-@import "components/header/down-btn";
-@import "components/header/arian";
 @import "components/header/not-home";
 @import "components/header/_site-title__link";
 
-@import "components/shared/visually-hidden";
-@import "components/shared/wrap";
-@import "components/shared/dons-btn";
-@import "components/shared/btn";
-@import "components/shared/link";
-@import "components/shared/address__part";
-@import "components/shared/bloc";
-@import "components/shared/read-more";
-@import "components/shared/center";
-@import "components/shared/dark-btn";
+@import "components/main/project-cta__article__thumbnail";
+@import "components/main/project-cta__article";
+@import "components/main/project-cta__container";
+@import "components/main/project-cta__article__title";
+@import "components/main/aboutme/about__content";
+@import "components/main/aboutme/about__content__text";
+@import "components/main/aboutme/_about__content_avatar";
+@import "components/main/project-cta__article__link";
+@import "components/main/single/_single__content";
+@import "components/main/single/_single__content__thumbnail";
+@import "components/main/single/_single__content__text";
+@import "components/main/single/single__content__online-links";
+@import "components/main/single/single__content__online-link";
+@import "components/main/single/single__content__thumbnail-container";
 
 @import "components/footer/footer__item__title";
 @import "components/footer/footer__main-part__container";
 @import "components/footer/footer__item";
-@import "components/footer/last-cta";
-@import "components/footer/last-cta__content";
 @import "components/footer/footer__main-part";
-@import "components/footer/partner-logo";
 @import "components/footer/footer__copyright-part";
 @import "components/footer/footer__social-part";
 
-@import "components/main/intro";
-@import "components/main/intro__content";
-@import "components/main/project-cta__article__thumbnail";
-@import "components/main/project-cta__article";
-@import "components/main/project-cta__container";
-@import "components/main/project-cta__article__date";
-@import "components/main/project-cta__article__teasing";
 
-
-@import "base/page";
-@import "base/paragraph";
-@import "base/title";
-@import "base/main";
-@import "base/footer";
 
 
 
