--- a/src/sass/components/header/_main-nav.scss
+++ b/src/sass/components/header/_main-nav.scss
@@ -1,6 +1,15 @@
 .main-nav{
-  width: 20em;
-  padding-left: 4em;
+  width: 23em;
+  padding-left: 2em;
   transition: 0.4s;
+
+  @media (max-width: 700px) {
+    position: absolute;
+    width: 11em;
+    height: 10em;
+    top: -0.05em;
+    left: -1.1em;
+    z-index: 1;
+  }
 }
 
