--- a/src/sass/components/header/_main-nav__links-list.scss
+++ b/src/sass/components/header/_main-nav__links-list.scss
@@ -1,4 +1,35 @@
 .main-nav__links-list{
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: 700px){
+    position: absolute;
+    left: -14em; //1
+    top: 0;
+    z-index: 1;
+    background-color: rgba(0,0,0,0);
+    color: #000000;
+    width: 100%;
+    height: 10em;
+    padding-top: 2.5em;
+    transition: 0.7s;
+    display: initial;
+
+    li{
+      display: list-item;
+      padding-left: 1em;
+      margin-bottom: 1em;
+    }
+  }
+}
+
+//checked
+
+.burger-menu-input:checked{
+
+  & ~ .main-nav__links-list{
+    background-color: $color3;
+    color: #ffffff;
+    left: 1em;
+  }
 }
