--- a/src/sass/components/header/_slogan.scss
+++ b/src/sass/components/header/_slogan.scss
@@ -1,4 +1,11 @@
 .slogan{
   margin-top: 7em;
   margin-bottom: 0;
+  width: 100%;
+  max-width: 30em;
+
+  @media (max-width: 500px){
+    max-width: 20em;
+    margin-top: 3em;
+  }
 }
