--- a/src/sass/components/header/_slogan__part1.scss
+++ b/src/sass/components/header/_slogan__part1.scss
@@ -1,5 +1,8 @@
 .slogan__part1{
   font-size: 2.25em;
   text-transform: uppercase;
-  width: 13em;
+
+  @media (max-width: 500px){
+    font-size: 1.5em;
+  }
 }
