--- a/src/sass/components/main/_project-cta__article__thumbnail.scss
+++ b/src/sass/components/main/_project-cta__article__thumbnail.scss
@@ -1,3 +1,18 @@
 .project-cta__article__thumbnail{
-  margin-bottom: 0.7em;
+  transition-duration: 0.4s;
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+}
+
+.project-cta__article__link{
+
+  &:hover, &:focus{
+
+    .project-cta__article__thumbnail{
+      opacity: 0.5;
+    }
+  }
+
+
 }
