--- a/src/sass/components/shared/_dark-btn.scss
+++ b/src/sass/components/shared/_dark-btn.scss
@@ -1,3 +1,13 @@
 .dark-btn{
-  border: 1px solid #000;
+  color: #ffffff;
+  border: 1px solid transparent;
+  border-radius: .2em;
+  transition: 0.3s;
+
+  &:hover{
+    border: 1px solid $color7;
+    background-color: #fff;
+    color: $color7;
+    transform: scale(1.03);
+  }
 }
