--- a/src/sass/components/shared/_wrap.scss
+++ b/src/sass/components/shared/_wrap.scss
@@ -4,7 +4,11 @@
   margin-left: auto;
   margin-right: auto;
   @media (max-width: 1460px) {
-    margin-left: 1.6666em;
-    margin-right: 1.6666em;
+    padding-left: 1.6666em;
+    padding-right: 1.6666em;
+  }
+  @media (max-width: 500px) {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
   }
 }
