--- a/src/sass/components/header/_slogan.scss
+++ b/src/sass/components/header/_slogan.scss
@@ -7,5 +7,8 @@
   @media (max-width: 500px){
     max-width: 20em;
     margin-top: 3em;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
