--- a/src/sass/components/main/aboutme/_about__content_avatar.scss
+++ b/src/sass/components/main/aboutme/_about__content_avatar.scss
@@ -2,7 +2,7 @@
   margin-right: 3em;
   margin-bottom: 1.2em;
   width: 100%;
-  height: auto;
+  height: 100%;
   max-width: 400px;
   border: 1px solid $color1;
   border-radius: 5px;
