--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,6 +7,7 @@
 
 @import "generic/reset";
 @import "generic/box-sizing";
+@import "generic/center";
 
 
 
@@ -44,6 +45,7 @@
 @import "components/header/slogan__part2";
 @import "components/header/top-bar-container";
 @import "components/header/not-home";
+@import "components/header/_site-title";
 @import "components/header/_site-title__link";
 
 @import "components/main/project-cta__article__thumbnail";
